# nexus-rtb-engine

./: .editorconfig  .gitignore  ARCHITECTURE.md  CALIBRATION_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DISTRIBUTED_DESIGN.md  Dockerfile  ECONOMIC_REPORT.md  FINAL_ENGINE_REPORT.md  FINAL_ENGINE_REPORT_V2.md  FINAL_ENGINE_REPORT_V3.md  LICENSE  MODEL_CARD.md  MODEL_INTEGRITY.md  MONITORING.md  README.md  ROLLOUT_STRATEGY.md  SECURITY.md  SIMULATION_REPORT.md  STRESS_TEST_REPORT.md  docker-compose.yml  model_backup.pkl  pyproject.toml  requirements.txt  run_tests.py  submission_benchmark.py
.github/: release.yml
.github/workflows/: ci.yml
benchmarks/: latency_benchmark.py
deploy/: app.py
docs/: project_report.md  security_audit.md
docs/reports/: CALIBRATION_REPORT.md  SIMULATION_REPORT.md  STRESS_TEST_REPORT.md
monitoring/prometheus/: prometheus.yml
scripts/: sign_model.py  upgrade_model.py
src/: Bid.py  model_metadata.json  model_weights.pkl.sig
src/bidding/: config.py  engine.py  features.py  model.py  pacing.py  schema.py
src/distributed/: budget_coordinator.py  simulation.py
src/evaluation/: calibration.py  hyperopt.py  metrics.py
src/monitoring/: drift.py
src/simulation/: replay.py  stress_test.py
src/training/: backtest.py  benchmark_imbalance.py  optimize_strategy.py  phase10_harness.py  phase11_harness.py  phase8_harness.py  phase9_harness.py  train.py
tests/: test_concurrency.py  test_engine.py  test_features.py  test_hard_exhaustion.py  test_pacing.py
training/: debug_data.py  train.py
(+4 files in other folders)
